--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Designs</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/images/interior-logo-design-house-and-furniture-symbol-template-vector.jpg" type="image/png">
+    <link rel="icon" href="images/interior-logo-design-house-and-furniture-symbol-template-vector.jpg" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,7 +30,7 @@
     <section class="sticky" >
         <header class="navbar bg-dark p-3" >
             <div class="img" style="cursor: pointer;">
-                <img class="img-fluid" src="/images/logo-white.png" alt="logo">
+                <img class="img-fluid" src="images/logo-white.png" alt="logo">
             </div>
 
             <div class="toggle-icon" onclick="toggleMenu()">
@@ -68,7 +68,7 @@
         <!-- The slideshow/carousel -->
         <section class="carousel-inner" id="home">
             <div class="carousel-item active">
-                <img src="/images/travel-slider-01.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+                <img src="images/travel-slider-01.jpg" alt="Los Angeles" class="d-block" style="width:100%">
                 <div class="carousel-caption">
                     <div class="carousel-content">
                         <p>IMAGINATION, <br>INNOVATION, <br>WORK <br>COLLABORATION.</p>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/travel-slider-02.jpg" alt="Chicago" class="d-block" style="width:100%">
+                <img src="images/travel-slider-02.jpg" alt="Chicago" class="d-block" style="width:100%">
                 <div class="carousel-caption">
                     <div class="carousel-content">
                         <p>IMAGINATION, <br>INNOVATION, <br>WORK <br>COLLABORATION.</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/travel-slider-03.jpg" alt="New York" class="d-block" style="width:100%">
+                <img src="images/travel-slider-03.jpg" alt="New York" class="d-block" style="width:100%">
                 <div class="carousel-caption">
                     <div class="carousel-content">
                         <p>IMAGINATION, <br>INNOVATION, <br>WORK <br>COLLABORATION.</p>
@@ -127,9 +127,9 @@
                         <a class="mt-3" href="#">EXPLORE SERVICES</a>
                     </div>
                 </div>
-                <div class="col-12 col-md-12 col-lg-6"">
+                <div class="col-12 col-md-12 col-lg-6">
                     <div class=" chair-img ">
-                      <img class=" img-fluid" src="/images/content-51.png" alt="chair">
+                      <img class=" img-fluid" src="images/content-51.png" alt="chair">
                 </div>
             </div>
         </div>
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-12 col-lg-7">
-                    <img class="img-fluid img" src="/images/hero-bg22.jpg" alt="chair">
+                    <img class="img-fluid img" src="images/hero-bg22.jpg" alt="chair">
                 </div>
             </div>
         </div>
@@ -207,28 +207,28 @@
         <div class="container mt-5 pb-5">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 cursor">
-                    <img class="img-fluid" src="/images/team-01.jpg" alt="table">
+                    <img class="img-fluid" src="images/team-01.jpg" alt="table">
                     <div class="text-center  black pt-4 pb-1">
                         <h6>COMMERCIAL DESIGN</h6>
                         <p>LOREM IPSUM</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 cursor">
-                    <img class="img-fluid" src="/images/team-02.jpg" alt="table">
+                    <img class="img-fluid" src="images/team-02.jpg" alt="table">
                     <div class="text-center  black pt-4 pb-1">
                         <h6>OFFICE DESIGN</h6>
                         <p>LOREM IPSUM</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 cursor">
-                    <img class="img-fluid" src="/images/team-03.jpg" alt="table">
+                    <img class="img-fluid" src="images/team-03.jpg" alt="table">
                     <div class="text-center  black pt-4 pb-1">
                         <h6>RESIDENTIAL DESIGN</h6>
                         <p>LOREM IPSUM</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 cursor">
-                    <img class="img-fluid" src="/images/team-08.jpg" alt="table">
+                    <img class="img-fluid" src="images/team-08.jpg" alt="table">
                     <div class="text-center  black pt-4 pb-1">
                         <h6>HOSPITALLY DESIGN</h6>
                         <p>LOREM IPSUM</p>
@@ -250,22 +250,22 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-12 col-md-6 col-lg-4 mb-3">
-                    <img class="img-fluid opacity" src="/images/agency-work-01.jpg" alt="table">
+                    <img class="img-fluid opacity" src="images/agency-work-01.jpg" alt="table">
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <img class="img-fluid  opacity" src="/images/agency-work-02.jpg" alt="table">
+                    <img class="img-fluid  opacity" src="images/agency-work-02.jpg" alt="table">
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 ">
-                    <img class="img-fluid  opacity" src="/images/agency-work-03.jpg" alt="table">
+                    <img class="img-fluid  opacity" src="images/agency-work-03.jpg" alt="table">
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 ">
-                    <img class="img-fluid  opacity" src="/images/agency-work-04.jpg" alt="table">
+                    <img class="img-fluid  opacity" src="images/agency-work-04.jpg" alt="table">
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 ">
-                    <img class="img-fluid  opacity" src="/images/agency-work-05.jpg" alt="table">
+                    <img class="img-fluid  opacity" src="images/agency-work-05.jpg" alt="table">
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 ">
-                    <img class="img-fluid  opacity" src="/images/agency-work-06.jpg" alt="table">
+                    <img class="img-fluid  opacity" src="images/agency-work-06.jpg" alt="table">
                 </div>
             </div>
     </section>
@@ -309,7 +309,7 @@
 
     <section>
         <div class="word-1">
-            <img class="img-fluid" src=""/images/hero-bg4.jpg" alt="table">
+            <img class="img-fluid" src="images/hero-bg4.jpg" alt="table">
             <div class="word pt-5">
                 <h3 style="font-size: 40px;">Simple is good. We turn <br>ideas into works of art.</h3>
                 <p class="pb-4" style="font-size: 20px;">Since our foundation in 2005 our goal has been to use digital
@@ -335,16 +335,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 pb-5">
-                    <img class="img-fluid" src=""/images/clients-2.png" alt="">
+                    <img class="img-fluid" src="images/clients-2.png" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
-                    <img class="img-fluid" src=""/images/clients-3.png" alt="">
+                    <img class="img-fluid" src="images/clients-3.png" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
-                    <img class="img-fluid" src=""/images/clients-5.png" alt="">
+                    <img class="img-fluid" src="images/clients-5.png" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
-                    <img class="img-fluid" src=""/images/clients-6.png" alt="">
+                    <img class="img-fluid" src="images/clients-6.png" alt="">
                 </div>
             </div>
         </div>
@@ -365,7 +365,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
         
-                    <img class="img-fluid" src=""/images/spa-blog-img01.jpg" alt="" id="imagetag">
+                    <img class="img-fluid" src="images/spa-blog-img01.jpg" alt="" id="imagetag">
                     <div class="hover">
                         <h2 class="pt-3" style="color: #c5a47e; font-size: 15px;">NOTHING CAN BE GAIN WITHOUT WARIKNG...
                         </h2>
@@ -377,7 +377,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <img class="img-fluid" src=""/images/spa-blog-img01.jpg" alt=""  id="imagetag">
+                    <img class="img-fluid" src="images/spa-blog-img01.jpg" alt=""  id="imagetag">
                     <h2 class="pt-3" style="color: #c5a47e; font-size: 15px;">NOTHING CAN BE GAIN WITHOUT WARIKNG...
                     </h2>
                     <p class="pt-2 pb-1" style="color: #f1f1f1; font-size: 14px;">Lorem Ipsum is simply dummy text of
@@ -387,7 +387,7 @@
                     <h4 style="color: #f1f1f1;font-size: 12px;">15 SEPTEMBER 2015 / POSTED BY NATHEN FORD</h4>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <img class="img-fluid" src=""/images/spa-blog-img01.jpg" alt=""  id="imagetag">
+                    <img class="img-fluid" src="images/spa-blog-img01.jpg" alt=""  id="imagetag">
                     <h2 class="pt-3" style="color: #c5a47e; font-size: 15px;">NOTHING CAN BE GAIN WITHOUT WARIKNG...
                     </h2>
                     <p class="pt-2 pb-1" style="color: #f1f1f1; font-size: 14px;">Lorem Ipsum is simply dummy text of
@@ -459,7 +459,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3">
-                    <img class="img-fluid" src=""/images/logo-white.png" alt="">
+                    <img class="img-fluid" src="images/logo-white.png" alt="">
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 footer">
                     <p style="color: #f1f1f1;">© 2016 LeadGen Is Proudly Powered By <a href="#">ThemeZaa.</a></p>
